--- a/apps/demo/src/app/home/home.page.html
+++ b/apps/demo/src/app/home/home.page.html
@@ -1,3 +1,4 @@
 <sio-page title="test" color="primary">
     <sio-language-selector></sio-language-selector>
+    <ion-icon name="home"></ion-icon>
 </sio-page>   
