fix icons in demo build

--- a/libs/core/src/lib/components/tabs/tabs.component.scss
+++ b/libs/core/src/lib/components/tabs/tabs.component.scss
@@ -30,3 +30,10 @@
     }
   }
 }
+
+:host[visible=false] {
+  ion-tab-bar {
+    /* Your styles for the selected ion-tab-bar here */
+    display: none;
+  }
+}
