--- a/apps/demo/src/app/home/home.page.html
+++ b/apps/demo/src/app/home/home.page.html
@@ -1,4 +1,2 @@
-<sio-page title="test" color="primary">
-    <sio-language-selector></sio-language-selector>
-    <ion-icon name="home"></ion-icon>
+<sio-page>    
 </sio-page>   
