--- a/libs/core/src/lib/components/menu/menu.component.html
+++ b/libs/core/src/lib/components/menu/menu.component.html
@@ -30,5 +30,5 @@
   </div>
 </ng-template>
 <ng-template #tab>
-  <sio-tabs *ngIf="this.position === 'bottom' || 'top'" [position]="this.position" color="primary"></sio-tabs> 
+  <sio-tabs *ngIf="this.position === 'bottom' || 'top'" position="bottom" color="primary"></sio-tabs> 
 </ng-template>
