refactor of app component

--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,2 +1,11 @@
-<sio-app leftPanelType="reveal">
+<sio-app
+  title="Demo"
+  leftPanelType="toogle"
+  tabMenuID="main"
+  leftPanelMenuID="main"
+  rightPanelType="overlay"
+  tabDesktopPosition="left"
+  tabMobilePosition="bottom"
+  color="primary"
+>
 </sio-app>
