--- a/apps/demo/src/app/app.component.scss
+++ b/apps/demo/src/app/app.component.scss
@@ -2,4 +2,7 @@ sio-app {
   --sio-left-menu-content-color: #ffffff;
   --sio-left-menu-footer-color: #ffffff;
   --sio-left-menu-header-color: #ffffff;
+  --sio-right-menu-content-color: #ffffff;
+  --sio-right-menu-footer-color: #ffffff;
+  --sio-right-menu-header-color: #ffffff;
 }
