--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,6 +1,6 @@
 <sio-app
   title="Demo"
-  leftPanelType="toogle"
+  leftPanelType="toggle"
   tabMenuID="main"
   leftPanelMenuID="main"
   rightPanelType="overlay"
