--- a/libs/core/src/lib/components/menu/menu.component.html
+++ b/libs/core/src/lib/components/menu/menu.component.html
@@ -17,6 +17,7 @@
 <div *ngIf="!this.sioCoreMenuState.caption">
   <ion-list inset="true">
     <ion-menu-toggle auto-hide="false">
+      <ion-item>ciao</ion-item>
       <sio-menu-item *ngFor="
           let item of this.sioCoreMenuState.items | keyvalue;
           trackBy: trackItems
