--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -1,11 +1,11 @@
 <sio-app
   title="Demo"
-  leftPanelType="toggle"
+  leftPanelType="push"
+  righPanelType="none"
   tabMenuID="main"
-  leftPanelMenuID="main"
-  rightPanelType="overlay"
   tabDesktopPosition="left"
   tabMobilePosition="bottom"
   color="primary"
 >
+<sio-darkmode-toggle slot="left_content"></sio-darkmode-toggle>
 </sio-app>
