--- a/apps/demo/src/app/app.component.html
+++ b/apps/demo/src/app/app.component.html
@@ -7,5 +7,6 @@
   tabMobilePosition="bottom"
   color="primary"
 >
-<sio-darkmode-toggle slot="left_content"></sio-darkmode-toggle>
+  <sio-darkmode-toggle slot="left_footer"></sio-darkmode-toggle>
+  
 </sio-app>
