--- a/apps/demo/src/theme/variables.scss
+++ b/apps/demo/src/theme/variables.scss
@@ -232,7 +232,7 @@
     --ion-tab-bar-background: #1f1f1f;
 
     --ion-card-background: #1e1e1e;
-  }
+  }}
 
   body.dark {
     --ion-color-primary: #428cff;
@@ -384,4 +384,4 @@
   
     --ion-card-background: #1e1e1e;
   }
-}
+
